Setup travis push

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,9 @@ script:
   - printf "module.exports={ignore:['node_modules','package-lock.json','.git','.travis.yml'],verbose:true};" > .linteverythingrc.js
   - node ./node_modules/linteverything/bin/linteverything.js
   - node main.js
+provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
+  keep-history: true
+  on:
+    branch: master
