--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ script:
   - git config --global user.email "travis@travis-ci.org"
   - git config --global user.name "Travis CI"
   - git commit -am "Travis build ${TRAVIS_BUILD_NUMBER}"
+  - printf ${TRAVIS_BUILD_NUMBER}
+  - printf $TRAVIS_BUILD_NUMBER
+  - printf $test
+  - printf $testko
   - git remote add tmp https://${GITHUB_TOKEN}@github.com/eleves-ig2i/ig2i-meta.git > /dev/null 2>&1
   - git push tmp master
 deploy:
