--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ script:
   - node main.js
   - git config --global user.email "travis@travis-ci.org"
   - git config --global user.name "Travis CI"
+  - git diff
   - git commit -am "Travis build ${TRAVIS_BUILD_NUMBER}"
   - printf ${TRAVIS_BUILD_NUMBER}
   - printf $TRAVIS_BUILD_NUMBER
