--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ script:
   - git status
   - git commit -am "Travis build ${TRAVIS_BUILD_NUMBER}"
   - git status
-  - git remote add tmp https://${GITHUB_TOKEN}@github.com/eleves-ig2i/ig2i-meta.git
+  - git remote add tmp https://${GITHUB_TOKEN}@github.com/eleves-ig2i/ig2i-meta.git > /dev/null 2>&1
   - git remote -v
+  - git checkout -b master
   - git push tmp master
   - git checkout -b yolo
   - git push tmp yolo
