--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ script:
   - git status
   - git remote add tmp https://${GITHUB_TOKEN}@github.com/eleves-ig2i/ig2i-meta.git > /dev/null 2>&1
   - git remote -v
-  - git checkout -b master
+  - git branch -av
+  - git checkout master
   - git push tmp master
   - git checkout -b yolo
   - git push tmp yolo
